--- a/main.html
+++ b/main.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<title>Second Highest</title>
 </head>
-
 <body>	
 	<script>
 		function secondHighest(arr) {
-			//Write your code here
-			if (arr.length < 2) return Infinity; // or null / "Not enough elements"
-  
-  // Sort in descending order
-  let sorted = [...arr].sort((a, b) => b - a); // use spread to avoid changing original
-  
-  return sorted[1];
-			
+			// Convert all string inputs to numbers
+			arr = arr.map(Number);
+
+			// Remove duplicates
+			let unique = [...new Set(arr)];
+
+			// If fewer than 2 unique elements, return -Infinity
+			if (unique.length < 2) return -Infinity;
+
+			// Sort descending and return second highest
+			unique.sort((a, b) => b - a);
+			return unique[1];
 		}
 
 		function Main() {
 			var n = prompt("Enter the number of elements");
 			var arr = [];
 			for (var i = 0; i < n; i++) {
-				arr[i] = prompt("Enter element " + (i+1));
+				arr[i] = prompt("Enter element " + (i + 1));
 			}
 			alert(secondHighest(arr));
 		}
 		Main();
 	</script>
-
-    <script type="text/javascript" src="./script.js">
-</script>
-
 </body>
-
 </html>
